Adds some translations

--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -585,10 +585,11 @@ CustomFilterPanel.error.noAccount=Bitte w\u00e4hlen Sie ein oder mehrere Konten
 CustomFilterPanel.error.noCategory=Bitte w\u00e4hlen Sie eine oder mehrere Kategorien
 CustomFilterPanel.error.noMode=Bitte w\u00e4hlen Sie eine oder mehrere Zahlungsweisen
 
+ExportComponent.export=Export
+ExportComponent.export.toolTip=Diese Tabelle als Textdatei speichern
+
 BudgetPanel.title=Budget
 BudgetPanel.tooltip=Verteilung der Einnahmen und Ausgaben pro Monat/Jahr
-BudgetPanel.export=Export
-BudgetPanel.export.toolTip=Diese Tabelle als Textdatei speichern
 BudgetPanel.filter=Filter
 BudgetPanel.filter.tooltip=Den Filter ensprechend der Auswahl einstellen
 BudgetPanel.perMonth=Monats\u00fcbersicht
@@ -685,6 +686,8 @@ checkbookDialog.finished.message=Das Scheckbuch ({0}->{1}) ist aufgebraucht. Was
 checkbookDialog.finished.createNew=Ein neues Scheckbuch anlegen
 checkbookDialog.finished.delete=Das Scheckbuch l\u00f6schen
 checkbookDialog.finished.DeleteAndCreateNew=L\u00f6schen und ein neues Scheckbuch anlegen
+
+
 
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
@@ -1357,5 +1360,5 @@ FilterManager.duplicates.tooltip=Den ausgew\u00e4hlten Filter duplizieren
 FilterManager.edit.tooltip=Den ausgew\u00e4hlten Filter bearbeiten
 FilterManager.nameField.label=Name:
 FilterManager.new.tooltip=Neue vordefinierte Filter erstellen
-FilterManager.tab.name=FilterAdminstration.toolTip
+FilterManager.tab.name=Auf dieser Registerkarte k\u00f6nnen Sie die Filter verwalten, die Sie speichern m\u00f6chten
 FilterManager.tab.tooltip=Filter
