--- a/src/Resources_es.properties
+++ b/src/Resources_es.properties
@@ -585,10 +585,11 @@ CustomFilterPanel.error.noAccount=Por favor seleccione una o m\u00e1s cuentas
 CustomFilterPanel.error.noCategory=Por favor seleccione una o m\u00e1s categor\u00edas
 CustomFilterPanel.error.noMode=Por favor seleccione uno o m\u00e1s modos
 
+ExportComponent.export=Exportar
+ExportComponent.export.toolTip=Exportar esta tabla como un archivo de texto
+
 BudgetPanel.title=Presupuesto
 BudgetPanel.tooltip=Distribuci\u00f3n de recibos y gastos del mes/a\u00f1o
-BudgetPanel.export=Exportar
-BudgetPanel.export.toolTip=Exportar esta tabla como un archivo de texto
 BudgetPanel.filter=Filtro
 BudgetPanel.filter.tooltip=Estrecha el filtro de la selecci\u00f3n actual
 BudgetPanel.perMonth=Asignaci\u00f3n mensual
@@ -685,6 +686,8 @@ checkbookDialog.finished.message=La chequera ({0}->{1}) est\u00e1 finalizada. \u
 checkbookDialog.finished.createNew=Crear un nuevo libro
 checkbookDialog.finished.delete=Eliminar la chequera
 checkbookDialog.finished.DeleteAndCreateNew=Eliminar y crear un nuevo libro
+
+
 
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
@@ -1357,5 +1360,4 @@ FilterManager.duplicates.tooltip=Duplicar el filtro seleccionado
 FilterManager.edit.tooltip=Editar el filtro seleccionado
 FilterManager.nameField.label=Nombre:
 FilterManager.new.tooltip=Crear un nuevo filtro pre-definido
-FilterManager.tab.name=FilterAdminstration.toolTip
 FilterManager.tab.tooltip=Filtros
