--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -479,6 +479,7 @@ ModeManager.deleteMessage.confirm=Confirmez-vous la suppression ?
 ModeManager.deleteMessage.title=Suppression d'un mode affect\u00e9e \u00e0 des op\u00e9rations
 AdministrationPlugIn.title=Administration
 AdministrationPlugIn.toolTip=Ajout, suppression, modification des comptes, des cat\u00e9gories, etc ...
+AdministrationPlugIn.toolTip.checkbookAlert=Attention, un ou plusieurs comptes sont \u00e0 court de ch\u00e8ques
 
 StatisticsPlugin.bar.debts=D\u00e9penses
 StatisticsPlugin.bar.empty=Aucune op\u00e9ration n'est visible sous le filtre actuel
@@ -585,10 +586,12 @@ CustomFilterPanel.error.noAccount=Au moins un compte doit \u00eatre s\u00e9lecti
 CustomFilterPanel.error.noCategory=Au moins une cat\u00e9gorie doit \u00eatre s\u00e9lectionn\u00e9e
 CustomFilterPanel.error.noMode=Au moins un mode de paiement doit \u00eatre s\u00e9lectionn\u00e9
 
+ExportComponent.export=Exporter
+ExportComponent.export.toolTip=Exporte le tableau au format texte
+ExportComponent.exportAs=En format {0} (.{1})
+
 BudgetPanel.title=Budget
 BudgetPanel.tooltip=R\u00e9partition des d\u00e9penses et recettes suivant les mois/ann\u00e9es
-BudgetPanel.export=Exporter
-BudgetPanel.export.toolTip=Exporte le tableau au format texte
 BudgetPanel.filter=Filtre
 BudgetPanel.filter.tooltip=Restreint le filtre \u00e0 la s\u00e9lection actuelle
 BudgetPanel.perMonth=Vue par mois
@@ -685,6 +688,17 @@ checkbookDialog.finished.message=Le ch\u00e9quier ({0}->{1}) est termin\u00e9, q
 checkbookDialog.finished.createNew=En cr\u00e9er un nouveau
 checkbookDialog.finished.delete=Supprimer ce ch\u00e9quier
 checkbookDialog.finished.DeleteAndCreateNew=Le supprimer et en cr\u00e9er un nouveau
+
+checkbookAlertsPreferencesDialog.Title=Gestion des pr\u00e9f\u00e9rences d'alerte
+checkbookAlertsPreferencesDialog.Help=<html>\u00c0 l'aide de ce dialogue, vous pouvez choisir si vous voulez \u00eatre averti quand un ou plusieurs ch\u00e9quiers sont \u00e9puis\u00e9s.<br>Si cette alerte est activ\u00e9e, vous verrez l'ic\u00f4ne d'avertissement appara\u00eetre sur le c\u00f4t\u00e9 de l'onglet <b>{0}</b>.</html>
+checkbookAlertsPreferencesDialog.State=Activer les alertes :
+checkbookAlertsPreferencesDialog.State.tooltip=Activer ou d\u00e9sactiver la v\u00e9rification du nombre de ch\u00e8ques restants
+checkbookAlertsPreferencesDialog.Value=Seuil d'alerte :
+checkbookAlertsPreferencesDialog.Value.tooltip=D\u00e9finissez le nombre de ch\u00e8ques au-dessous duquel vous souhaitez recevoir l'alerte
+checkbookAlertsPreferencesDialog.error.valueIsBlank=Ce bouton est d\u00e9sactiv\u00e9 car le seuil d'alerte n'est pas valide
+
+checkbookAlertsWidget.openPreferencesDialog=Param\u00e8tres des alertes
+checkbookAlertsWidget.openPreferencesDialog.tooltip=Vous permet de d\u00e9finir quand l'avertissement est lorsque le compte est \u00e0 court de ch\u00e8ques
 
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
@@ -1296,6 +1310,8 @@ ExportDialog.decimalSeparator.customized.toolTip=Choisissez cette option pour en
 ExportDialog.decimalSeparator.customizedChar.toolTip=Tapez le s\u00e9parateur de d\u00e9cimales personnalis\u00e9 ici
 ExportDialog.decimalSeparator.defaultSeparator=S\u00e9parateur par d\u00e9faut ({0})
 ExportDialog.decimalSeparator.defaultSeparator.toolTip=Choisissez cette option pour utiliser le s\u00e9parateur de d\u00e9cimales par d\u00e9faut
+ExportDialog.formatMessage=S\u00e9lectionnez le format de l'export
+ExportDialog.formatMessage.tooltip=S\u00e9lectionnez le format souhait\u00e9 pour le fichier d'export
 ImportDialog.ignoreFirstLine=Ignorer les premi\u00e8res lignes du fichier. Nombre de lignes :
 ImportDialog.ignoreFirstLine.toolTip=Cochez cette case pour ignorer les premi\u00e9res lignes du fichier (si, par exemple, ce sont des lignes d'en-t\u00eate)
 ImportDialog.lineNumber.toolTip=<html>Ce champ contient le num\u00e9ro de la ligne du fichier import\u00e9 utilis\u00e9e pour remplir la colonne <b>"{0}"</b> ci-dessus</html>
