--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -582,10 +582,11 @@ CustomFilterPanel.error.noAccount=Por favor selecione uma ou mais contas
 CustomFilterPanel.error.noCategory=Por favor selecione uma ou mais categorias
 CustomFilterPanel.error.noMode=Por favor selecione um ou mais modo
 
+ExportComponent.export=Exportador
+ExportComponent.export.toolTip=Exporta esta tabela para um arquivo de texto
+
 BudgetPanel.title=Or\u00e7amento
 BudgetPanel.tooltip=Fun\u00e7\u00e3o de distribui\u00e7\u00e3o de recibos e despesas do m\u00eas/ano e categorias
-BudgetPanel.export=Exportador
-BudgetPanel.export.toolTip=Exporta esta tabela para um arquivo de texto
 BudgetPanel.filter=Filtro
 BudgetPanel.filter.tooltip=Estreita o filtro para a sele\u00e7\u00e3o atual
 BudgetPanel.perMonth=Por m\u00eas
@@ -679,6 +680,8 @@ checkbookDialog.finished.message=O livro-cheque ({0}->{1}) est\u00e1 terminado, 
 checkbookDialog.finished.createNew=Cria um novo
 checkbookDialog.finished.delete=Deleta o livro-cheque
 checkbookDialog.finished.DeleteAndCreateNew=Deleta o mesmo e cria um novo
+
+
 
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
