--- a/src/Resources_tr.properties
+++ b/src/Resources_tr.properties
@@ -585,10 +585,11 @@ CustomFilterPanel.error.noAccount=L\u00fctfen bir veya daha fazla hesab se\u00e7
 CustomFilterPanel.error.noCategory=L\u00fctfen bir veya daha fazla kategori se\u00e7in
 CustomFilterPanel.error.noMode=L\u00fctfen bir veya daha fazla modu se\u00e7in
 
+ExportComponent.export=D\u0131\u015fa aktar
+ExportComponent.export.toolTip=Bu tabloyu bir metin dosyas\u0131 gibi d\u0131\u015far\u0131 aktar
+
 BudgetPanel.title=B\u00fct\u00e7e
 BudgetPanel.tooltip=Gelirlerin ve giderlerin ay/y\u0131l'a g\u00f6re da\u011f\u0131l\u0131m\u0131
-BudgetPanel.export=D\u0131\u015fa aktar
-BudgetPanel.export.toolTip=Bu tabloyu bir metin dosyas\u0131 gibi d\u0131\u015far\u0131 aktar
 BudgetPanel.filter=Filtre
 BudgetPanel.filter.tooltip=Filtreyi ge\u00e7erli se\u00e7ime g\u00f6re daralt\u0131yor
 BudgetPanel.perMonth=Ay baz\u0131nda tahsis
@@ -685,6 +686,8 @@ checkbookDialog.finished.message=\u00c7ek defteri ( {0} -> {1}) tamamland\u0131.
 checkbookDialog.finished.createNew=Yeni kitap olu\u015ftur
 checkbookDialog.finished.delete=\u00c7ek defterini sil
 checkbookDialog.finished.DeleteAndCreateNew=Onu sil ve yeni kitap olu\u015ftur
+
+
 
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
