--- a/src/Resources_el.properties
+++ b/src/Resources_el.properties
@@ -585,10 +585,11 @@ CustomFilterPanel.error.noAccount=\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03
 CustomFilterPanel.error.noCategory=\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b5\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03bc\u03af\u03b1 \u03b7 \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03b5\u03c2 \u03ba\u03b1\u03c4\u03b7\u03b3\u03bf\u03c1\u03af\u03b5\u03c2
 CustomFilterPanel.error.noMode=\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b5\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03bc\u03af\u03b1 \u03b7 \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03b5\u03c2 \u03bb\u03b5\u03b9\u03c4\u03bf\u03c5\u03c1\u03b3\u03af\u03b5\u03c2
 
+ExportComponent.export=\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae
+ExportComponent.export.toolTip=\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf\u03cd \u03c0\u03af\u03bd\u03b1\u03ba\u03b1, \u03cc\u03c0\u03c9\u03c2 \u03ad\u03bd\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03ba\u03b5\u03b9\u03bc\u03ad\u03bd\u03bf\u03c5
+
 BudgetPanel.title=\u03a0\u03c1\u03bf\u03cb\u03c0\u03bf\u03bb\u03bf\u03b3\u03b9\u03c3\u03bc\u03cc\u03c2
 BudgetPanel.tooltip=\u039a\u03b1\u03c4\u03b1\u03bd\u03bf\u03bc\u03ae \u03c4\u03c9\u03bd \u03b5\u03c3\u03cc\u03b4\u03c9\u03bd \u03ba\u03b1\u03b9 \u03b5\u03be\u03cc\u03b4\u03c9\u03bd \u03c4\u03bf\u03c5 \u03bc\u03ae\u03bd\u03b1/\u03ad\u03c4\u03bf\u03c5\u03c2
-BudgetPanel.export=\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae
-BudgetPanel.export.toolTip=\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf\u03cd \u03c0\u03af\u03bd\u03b1\u03ba\u03b1, \u03cc\u03c0\u03c9\u03c2 \u03ad\u03bd\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03ba\u03b5\u03b9\u03bc\u03ad\u03bd\u03bf\u03c5
 BudgetPanel.filter=\u03a6\u03af\u03bb\u03c4\u03c1\u03bf
 BudgetPanel.filter.tooltip=\u03a3\u03c4\u03b5\u03bd\u03b5\u03cd\u03b5\u03b9 \u03c4\u03bf \u03c6\u03af\u03bb\u03c4\u03c1\u03bf \u03b3\u03b9\u03b1 \u03c4\u03b7\u03bd \u03c4\u03c1\u03ad\u03c7\u03bf\u03c5\u03c3\u03b1 \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae
 BudgetPanel.perMonth=\u039a\u03b1\u03c4\u03b1\u03bd\u03bf\u03bc\u03ae \u03b1\u03bd\u03b1 \u03bc\u03ae\u03bd\u03b1
@@ -685,6 +686,8 @@ checkbookDialog.finished.message=\u03a4\u03bf \u03ba\u03b1\u03c1\u03bd\u03ad \u0
 checkbookDialog.finished.createNew=\u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03bd\u03ad\u03bf\u03c5 \u03bc\u03c0\u03bb\u03bf\u03ba \u03b5\u03c0\u03b9\u03c4\u03b1\u03b3\u03ce\u03bd
 checkbookDialog.finished.delete=\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae \u03c4\u03bf\u03cd \u03bd\u03ad\u03bf\u03c5 \u03bc\u03c0\u03bb\u03bf\u03ba \u03b5\u03c0\u03b9\u03c4\u03b1\u03b3\u03ce\u03bd
 checkbookDialog.finished.DeleteAndCreateNew=\u0394\u03b9\u03b1\u03b3\u03c1\u03ac\u03c8\u03b5\u03c4\u03b5 \u03c4\u03bf \u03ba\u03b1\u03b9 \u03b4\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03ae\u03c3\u03c4\u03b5 \u03ad\u03bd\u03b1 \u03bd\u03ad\u03bf
+
+
 
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
@@ -1357,5 +1360,4 @@ FilterManager.duplicates.tooltip=\u0391\u03bd\u03c4\u03b9\u03b3\u03c1\u03ac\u03c
 FilterManager.edit.tooltip=\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u03c4\u03bf\u03c5 \u03b5\u03c0\u03b9\u03bb\u03b5\u03b3\u03bc\u03ad\u03bd\u03bf\u03c5 \u03c6\u03af\u03bb\u03c4\u03c1\u03bf\u03c5
 FilterManager.nameField.label=\u038c\u03bd\u03bf\u03bc\u03b1:
 FilterManager.new.tooltip=\u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03bd\u03ad\u03bf\u03c5 \u03c0\u03c1\u03bf\u03ba\u03b1\u03b8\u03bf\u03c1\u03b9\u03c3\u03bc\u03ad\u03bd\u03bf\u03c5 \u03c6\u03af\u03bb\u03c4\u03c1\u03bf\u03c5
-FilterManager.tab.name=FilterAdminstration.toolTip
 FilterManager.tab.tooltip=\u03a6\u03af\u03bb\u03c4\u03c1\u03b1
