--- a/src/Resources_it.properties
+++ b/src/Resources_it.properties
@@ -585,10 +585,12 @@ CustomFilterPanel.error.noAccount=Si prega di selezionare uno o pi\u00f9 account
 CustomFilterPanel.error.noCategory=Si prega di selezionare una o pi\u00f9 categorie
 CustomFilterPanel.error.noMode=Si prega di selezionare uno o pi\u00f9 modalit\u00e0
 
+ExportComponent.export=Esporta
+ExportComponent.export.toolTip=Esporta questa tabella come file di testo
+ExportComponent.exportAs=In formato {0} (.{1})
+
 BudgetPanel.title=Bilancio
 BudgetPanel.tooltip=Distribuzione delle entrate e delle uscite per mese/anno
-BudgetPanel.export=Esporta
-BudgetPanel.export.toolTip=Esporta questa tabella come file di testo
 BudgetPanel.filter=Filtri
 BudgetPanel.filter.tooltip=Restringe il filtro alla selezione corrente
 BudgetPanel.perMonth=Allocazione per mese
@@ -685,6 +687,8 @@ checkbookDialog.finished.message=Il libretto degli assegni ({0}->{1}) \u00e8 fin
 checkbookDialog.finished.createNew=Crea un nuovo libretto
 checkbookDialog.finished.delete=Elimina il libretto degli assegni
 checkbookDialog.finished.DeleteAndCreateNew=Eliminalo e crea un nuovo libretto
+
+
 
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
@@ -1296,6 +1300,8 @@ ExportDialog.decimalSeparator.customized.toolTip=Seleziona questa opzione per sp
 ExportDialog.decimalSeparator.customizedChar.toolTip=Inserire il separatore preferito
 ExportDialog.decimalSeparator.defaultSeparator=Predefinito ({0})
 ExportDialog.decimalSeparator.defaultSeparator.toolTip=Seleziona questa opzione per utilizzare il separatore predefinito
+ExportDialog.formatMessage=Seleziona il formato per l'esportazione.
+ExportDialog.formatMessage.tooltip=Seleziona il formato del file che desideri esportare
 ImportDialog.ignoreFirstLine=Ignorare la prima linea. Numero di linee:
 ImportDialog.ignoreFirstLine.toolTip=Se le prime righe del file sono un'intestazione, allora seleziona questa opzione per ignorare l'intestazione
 ImportDialog.lineNumber.toolTip=<html>Questo campo contiene il numero della riga utilizzata per popolare la colonna <b>"{0}"</b> della tabella principale</html>
