Ready to publish

--- a/src/Resources_it.properties
+++ b/src/Resources_it.properties
@@ -479,6 +479,7 @@ ModeManager.deleteMessage.confirm=Vuoi davvero eliminare questa modalit\u00e0 di
 ModeManager.deleteMessage.title=Eliminazione modalit\u00e0 di pagamento in uso 
 AdministrationPlugIn.title=Amministrazione
 AdministrationPlugIn.toolTip=Aggiungere, eliminare o modificare conti, categorie, ecc. 
+AdministrationPlugIn.toolTip.checkbookAlert=Attenzione, uno o pi\u00f9 conti stanno esaurendo i libretti degli assegni
 
 StatisticsPlugin.bar.debts=Uscite
 StatisticsPlugin.bar.empty=Nessuna transazione trovata usando il filtro corrente
@@ -688,7 +689,16 @@ checkbookDialog.finished.createNew=Crea un nuovo libretto
 checkbookDialog.finished.delete=Elimina il libretto degli assegni
 checkbookDialog.finished.DeleteAndCreateNew=Eliminalo e crea un nuovo libretto
 
+checkbookAlertsPreferencesDialog.Title=Gestione preferenze avvisi
+checkbookAlertsPreferencesDialog.Help=<html>Usando questa finestra puoi scegliere se vuoi essere avvisato quando uno o pi\u00f9 libretti degli assegni stanno esaurendo.<br>Se questo avviso \u00e8 abilitato, vedrai l'icona di avviso apparire sul lato della scheda <b>{0}</b> .</html>
+checkbookAlertsPreferencesDialog.State=Attiva avvisi:
+checkbookAlertsPreferencesDialog.State.tooltip=Abilita o disabilita il controllo della quantit\u00e0 di assegni rimanenti 
+checkbookAlertsPreferencesDialog.Value=Soglia minima da notificare:
+checkbookAlertsPreferencesDialog.Value.tooltip=Definisci la soglia al di sotto della quale desideri ricevere l'avviso
+checkbookAlertsPreferencesDialog.error.valueIsBlank=Disabilitato perch\u00e9 il valore di soglia non \u00e8 valido
 
+checkbookAlertsWidget.openPreferencesDialog=Preferenze avvisi
+checkbookAlertsWidget.openPreferencesDialog.tooltip=Consente di impostare una soglia sotto la quale verranno sollevati degli avvisi di notifica per l'esaurimento di uno o pi\u00f9 libretti degli assegni 
 
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
