--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -5,7 +5,7 @@ known
 	On MacOS, The copy/paste shortcut is ctrl C/V and not Command C/V. Unfortunately, this is a bug in java JTextField and can't be fixed.
 	On windows, using other themes than Nimbus makes description and comment columns not to be correctly vertically aligned (seems to be a Java bug).
 
-version	0.21.0 (11/??/2021)
+version	0.21.0 (11/26/2021)
 improvement
 	Adds alerts when checkbooks end.
 	Adds Html and JSon export format.
