--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -5,7 +5,9 @@ known
 	Sur MacOS, Le raccourci clavier du copier/coller est CTRL C/V et non commande C/V. Malheureusement, c'est un bug de Java qui ne peut être corrigé.
 	Sur Windows, les thèmes autre que Nimbus rendent incorrect l'alignement vertical des colonnes "description" et "commentaire" (Cela semble un bug de Java).
 	
-version	0.21.2 (??/12/2021)
+version	0.21.2 (04/12/2021)
+improvement
+	Traduction en italien des pages d'aide ainsi que de la license et de la page des contributeurs.
 fix
 	Le menu File/Import ne fonctionnait plus dans les versions 0.21.0 et supérieures.
 
