--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -5,6 +5,12 @@ known
 	On MacOS, The copy/paste shortcut is ctrl C/V and not Command C/V. Unfortunately, this is a bug in java JTextField and can't be fixed.
 	On windows, using other themes than Nimbus makes description and comment columns not to be correctly vertically aligned (seems to be a Java bug).
 
+version	0.21.2 (12/04/2021)
+improvement
+	Italian translation of license, contributors and help pages.
+fix
+	File/Import menu did not work anymore in versions 0.21.0+
+
 version	0.21.1 (11/28/2021)
 fix
 	Previous version crashed in language other than French and Italian.
