--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -5,6 +5,11 @@ known
 	On MacOS, The copy/paste shortcut is ctrl C/V and not Command C/V. Unfortunately, this is a bug in java JTextField and can't be fixed.
 	On windows, using other themes than Nimbus makes description and comment columns not to be correctly vertically aligned (seems to be a Java bug).
 
+version	0.21.3 (02/??/2023)
+fix
+	Creating a new Dropbox connection did not work anymore (Dropbox has stop delivering long-lived tokens).
+	Reading through network was very, very slow
+
 version	0.21.2 (12/04/2021)
 improvement
 	Italian translation of license, contributors and help pages.
