--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -5,6 +5,11 @@ known
 	Sur MacOS, Le raccourci clavier du copier/coller est CTRL C/V et non commande C/V. Malheureusement, c'est un bug de Java qui ne peut être corrigé.
 	Sur Windows, les thèmes autre que Nimbus rendent incorrect l'alignement vertical des colonnes "description" et "commentaire" (Cela semble un bug de Java).
 	
+version	0.21.3 (02/??/2023)
+fix
+	La création d'une nouvelle connexion à Dropbox ne fonctionnait plus (Dropbox a cessé de fournir des jetons de connexion éternels).
+	La lecture des données sur un disque réseau était extrêmement lente.
+
 version	0.21.2 (04/12/2021)
 improvement
 	Traduction en italien des pages d'aide ainsi que de la license et de la page des contributeurs.
