--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -7,8 +7,9 @@ known
 	
 version	0.21.3 (02/??/2023)
 fix
-	La création d'une nouvelle connexion à Dropbox ne fonctionnait plus (Dropbox a cessé de fournir des jetons de connexion éternels).
+	La création d'une nouvelle connexion à Dropbox ne fonctionnait plus (Dropbox a cessé de fournir des jetons de connexion éternels utilisés jusqu'alors).
 	La lecture des données sur un disque réseau était extrêmement lente.
+	Lorsqu'on changeait la date dans le dialogue de génération des opérations périodiques, une erreur pouvait survenir.
 
 version	0.21.2 (04/12/2021)
 improvement
