Fixes crash on startup when set to Arabic

--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -5,11 +5,12 @@ known
 	Sur MacOS, Le raccourci clavier du copier/coller est CTRL C/V et non commande C/V. Malheureusement, c'est un bug de Java qui ne peut être corrigé.
 	Sur Windows, les thèmes autre que Nimbus rendent incorrect l'alignement vertical des colonnes "description" et "commentaire" (Cela semble un bug de Java).
 	
-version	0.21.3 (02/??/2023)
+version	0.21.3 (12/02/2023)
 fix
 	La création d'une nouvelle connexion à Dropbox ne fonctionnait plus (Dropbox a cessé de fournir des jetons de connexion éternels utilisés jusqu'alors).
 	La lecture des données sur un disque réseau était extrêmement lente.
 	Lorsqu'on changeait la date dans le dialogue de génération des opérations périodiques, une erreur pouvait survenir.
+	L'application plantait au démarrage lorsqu'elle était configurée en arabe.
 
 version	0.21.2 (04/12/2021)
 improvement
@@ -19,7 +20,7 @@ fix
 
 version	0.21.1 (28/11/2021)
 fix
-	La version précédente se plantait quand elle était configuré dans une autre langue que français ou italien.
+	La version précédente se plantait quand elle était configurée dans une autre langue que français ou italien.
 
 version	0.21.0 (26/11/2021)
 improvement
