--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -5,6 +5,14 @@ known
 	On MacOS, The copy/paste shortcut is ctrl C/V and not Command C/V. Unfortunately, this is a bug in java JTextField and can't be fixed.
 	On windows, using other themes than Nimbus makes description and comment columns not to be correctly vertically aligned (seems to be a Java bug).
 
+version	0.21.3 (02/14/2023)
+fix
+	Creating a new Dropbox connection did not work anymore (Dropbox has stop delivering long-lived tokens used before).
+	Reading through network was very, very slow.
+	When changing the date in the dialog for generating periodic operations, an error could occur.
+	Application crashed on startup when set to Arabic.
+	Unintentionally, versions 0.21.0 to 0.21.2 were no longer compatible with java 1.6 and 1.7.
+
 version	0.21.2 (12/04/2021)
 improvement
 	Italian translation of license, contributors and help pages.
