Make code compilable by JDK 21+ + Fixes some wordings

--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -728,8 +728,8 @@ StatementView.tooltip=Vue relev\u00e9s de comptes
 StatementView.accountMenu.tooltip=Choisissez le compte dont vous souhaitez visualiser les relev\u00e9s
 StatementView.statementMenu.statementMenu.tooltip=Choisissez le relev\u00e9 que vous souhaitez afficher
 StatementView.notChecked=Non point\u00e9
-StatementView.startBalance=<html>Solde en d\u00e9but de p\u00e9riode : <b>{0}</b></html>
-StatementView.endBalance=<html>Solde en fin de p\u00e9riode : <b>{0}</b></html>
+StatementView.startBalance=Solde au d\u00e9but de la p\u00e9riode : {0}
+StatementView.endBalance=Solde en fin de p\u00e9riode : {0}
 StatementView.statementSummary={0} op\u00e9rations. Total des d\u00e9penses : {1}. Total des recettes : {2}
 #The title of the receipt column
 StatementView.receipt=Cr\u00e9dit
