--- a/src/Resources_nl.properties
+++ b/src/Resources_nl.properties
@@ -310,7 +310,7 @@ TransactionDialog.SubPanel.modify.tooltip=Bewerk de geselecteerde subtransactie
 TransactionDialog.SubPanel.new=Nieuwe subtransactie
 TransactionDialog.SubPanel.new.tooltip=Maak een nieuwe subtransactie
 TransactionDialog.SubPanel.title=Subtransacties
-TransactionDialog.SubPanel.total=Totaal subtransacties: {0,number,valuta}
+TransactionDialog.SubPanel.total=Totaal subtransacties: {0,number,currency}
 TransactionDialog.checkbook.new.tooltip=Klik om een nieuw chequeboekje te maken
 
 SubTransactionDialog.amount.tooltip=Voer subtransactie bedrag in
