--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -4,13 +4,13 @@ known
 	Sur MacOS, Le raccourci clavier du copier/coller est CTRL C/V et non commande C/V. Malheureusement, c'est un bug de Java qui ne peut être corrigé.
 	Sur Windows, les thèmes autre que Nimbus rendent incorrect l'alignement vertical des colonnes "description" et "commentaire" (Cela semble un bug de Java).
 	
-version	0.21.4 (??/11/2025)
+version	0.21.4 (08/11/2025)
 improvement
 	<b>ATTENTION : Cette version requiert Java 1.8 ou ultérieur.</b>
 fix
 	Suppression du menu "?/Aide" qui ouvrait une page de test.
 	Correction de l'adresse du support dans le menu "?/Support".
-	L'application Windows (Yapbam.exe) ne démarrait pas avec les versions de Java supérieures à 1.8 (elle disait nécessiter une version 1.6+ de Java).
+	L'application Windows (Yapbam.exe) ne démarrait pas avec certaines versions de Java supérieures à 1.8 (elle disait nécessiter une version 1.6+ de Java).
 	Le décodage des montants dans certaines langues (en français par example), ne fonctionnait pas correctement avec Java 17+.
 	Les fichiers raccourcis dans Windows 11 n'étaient pas correctement gérés.
 
